--- a/package.json
+++ b/package.json
@@ -13,11 +13,15 @@
     "@reduxjs/toolkit": "^2.2.2",
     "axios": "^1.6.8",
     "formik": "^2.4.5",
+    "html-react-parser": "^5.1.10",
+    "quill": "^2.0.0-rc.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^5.0.1",
+    "react-quill": "^2.0.0",
     "react-redux": "^9.1.0",
     "react-router-dom": "^6.22.3",
+    "react-select": "^5.8.0",
     "react-toastify": "^10.0.5",
     "yup": "^1.4.0"
   },
